chore: reset the project